Use system fonts, not worth loading web font for small tool

--- a/style.css
+++ b/style.css
@@ -1,52 +1,14 @@
-@font-face {
-  font-family: 'Inter UI';
-  src: url('/fonts/Inter-UI-Regular.woff2') format('woff2'),
-       url('/fonts/Inter-UI-Regular.woff') format('woff');
-  font-display: optional;
-  font-weight: regular;
-}
-
-@font-face {
-  font-family: 'Inter UI';
-  src: url('/fonts/Inter-UI-Medium.woff2') format('woff2'),
-       url('/fonts/Inter-UI-Medium.woff') format('woff');
-  font-display: optional;
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: 'Inter UI';
-  src: url('/fonts/Inter-UI-Bold.woff2') format('woff2'),
-       url('/fonts/Inter-UI-Bold.woff') format('woff');
-  font-display: optional;
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: 'Inter UI';
-  src: url('/fonts/Inter-UI-Black.woff2') format('woff2'),
-       url('/fonts/Inter-UI-Black.woff') format('woff');
-  font-display: optional;
-  font-weight: 900;
-}
-
 body {
-  font-family: 'Inter UI', sans-serif;
-  font-size: 14px;
+  font-family: 'Inter UI', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 14.5px;
   color: #111;
   margin: 0;
   padding: 10px 0;
+  line-height: 1.5;
 }
 
 p {
   line-height: 1.5;
-}
-
-@media (min-width: 600px) {
-
-  body {
-    padding: 40px 0;
-  }
 }
 
 .container {
@@ -212,7 +174,7 @@ label[for="pixel-size-input"] {
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
 }
 
 .spinner:after {
